--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
 
-        <h1>Alex Pendzick head</h1>
+        <h1>Alex Pendzick</h1>
         <p>This is a test for a comp290 class, where we are learning git</p>
 
     </body>
